--- a/src/components/sections/HeroSection/hero-section.css
+++ b/src/components/sections/HeroSection/hero-section.css
@@ -1,13 +1,11 @@
-.gradient-border-button {
-  position: relative;
-  padding: 12px 24px;
-  font-size: 1rem;
-  font-weight: 600;
-  color: white;
-  letter-spacing: 0px;
-  border: none;
-  outline: none;
+.container {
+  width: 265;
+  height: 32;
   border-radius: 100px;
+  border: none;
+  padding: 0.5rem;
+  position: relative;
+  color: rgba(248, 248, 248, 0.95);
   background: linear-gradient(
     135deg,
     #dcc0dc 3.75%,
@@ -15,19 +13,24 @@
     #7a86fa 66.75%,
     #024eea 97.25%
   );
-  cursor: pointer;
+  font-size: 0.875rem;
+  letter-spacing: 0px;
+  font-weight: 500;
   z-index: 0;
-  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
-.gradient-border-button::before {
+.container::before {
   content: "";
   position: absolute;
   top: 1.5px;
   right: 1.5px;
   bottom: 1.5px;
   left: 1.5px;
-  background: rgba(33, 33, 43, 0.95);
+  background: rgba(33, 33, 43, 0.95); /* your actual background */
   box-shadow:
     0px 32px 24px -16px rgba(0, 0, 0, 0.4),
     inset 0px 0px 8px 0px rgba(248, 248, 248, 0.25);
@@ -38,13 +41,7 @@
 }
 
 .gradient-border-button::after {
-  content: attr(data-text);
   position: relative;
   z-index: 1;
   transition: all 0.3s ease-in-out;
-}
-
-.gradient-border-button:hover::before {
-  background: transparent;
-  box-shadow: none;
 }
